<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startup.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="127dp"
            android:layout_height="128dp"
            android:layout_marginTop="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/sign_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/eye_sign_up_name"
            android:textAppearance="@style/TextAppearance.eyeHealth.Title" />

        <android.support.design.card.MaterialCardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/signPageBackgroundColor"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_text_input"
                    style="@style/Widget.eyeHealth.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/eye_hint_name">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/surname_text_input"
                    style="@style/Widget.eyeHealth.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/eye_hint_surname">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/surname_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:maxLength="30"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_text_input"
                    style="@style/Widget.eyeHealth.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/eye_hint_email_sign_up">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:maxLength="30"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_text_input"
                    style="@style/Widget.eyeHealth.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/eye_hint_password_sign_up">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="12"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/re_enter_password_text_input"
                    style="@style/Widget.eyeHealth.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/eye_hint_re_enter_password">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/re_enter_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="12"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/sign_in_button"
                        style="@style/Widget.eyeHealth.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/eye_button_register" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/cancel_button"
                        style="@style/Widget.eyeHealth.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_toStartOf="@id/sign_in_button"
                        android:layout_toLeftOf="@id/sign_in_button"
                        android:text="@string/eye_button_cancal" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/link_to_sign_in_button"
                        style="@style/Widget.eyeHealth.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/eye_button_link_to_sign_in"
                        android:textColor="#0097a7"
                        android:textSize="18dp" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.design.card.MaterialCardView>


    </LinearLayout>
</ScrollView>
